PROJECT(VNet)
SET(CMAKE_INCLUDE_DIRECTORIES_PROJECT_BEFORE  true )
SET(CMAKE_USE_RELATIVE_PATHS  true )
ADD_DEFINITIONS("-Wall -ggdb")
SET (EXTRA_LIBS ${EXTRA_LIBS}   pthread  protobuf)

AUX_SOURCE_DIRECTORY(. SRC_LIST )
ADD_EXECUTABLE(client ${SRC_LIST} )
ADD_EXECUTABLE(server ${SRC_LIST} )
TARGET_LINK_LIBRARIES (server ${EXTRA_LIBS}




